--- a/main.tex
+++ b/main.tex
@@ -132,19 +132,12 @@
 %---------- HEADING ----------
 
 \begin{center}
-    \textbf{\Huge \scshape Aras Güngöre} \\ \vspace{3pt}
+    \textbf{\Huge \scshape Tinghao Lu} \\ \vspace{3pt}
     \small
-    \faMobile \hspace{.5pt} \href{tel:905314204536}{+90 531 420 4536}
+    \faMobile \hspace{.5pt} \href{tel:08615658131822}{+86 15658131822}
     $|$
-    \faAt \hspace{.5pt} \href{mailto:arasgungore09@gmail.com}{arasgungore09@gmail.com}
+    \faAt \hspace{.5pt} \href{vinceluth@163.com}{vinceluth@163.com}
     $|$
-    \faLinkedinSquare \hspace{.5pt} \href{https://www.linkedin.com/in/arasgungore}{LinkedIn}
-    $|$
-    \faGithub \hspace{.5pt} \href{https://github.com/arasgungore}{GitHub}
-    $|$
-    \faGlobe \hspace{.5pt} \href{https://arasgungore.github.io}{Portfolio}
-    $|$
-    \faMapMarker \hspace{.5pt} \href{https://www.google.com/maps/place/Bogazici+University+North+Campus/@41.0863067,29.0441352,15z/data=!4m5!3m4!1s0x0:0x9d2497b07c8edb2f!8m2!3d41.0863067!4d29.0441352}{Istanbul, Turkey}
 \end{center}
 
 
@@ -154,22 +147,16 @@
 \section{Education}
   \vspace{3pt}
   \resumeSubHeadingListStart
-    
-    \resumeEducationHeading
-      {Boğaziçi University
-      % \normalfont{(Admission rate: 0.09\%)}
-      }{Istanbul, Turkey}
-      {B.Sc. in Electrical and Electronics Engineering;   \textbf{GPA: 3.73/4.00}}{Sep 2018 \textbf{--} Jun 2023 (Expected)}
-      {Minor Degree in Computer Engineering;   \textbf{GPA: 3.89/4.00}}{Oct 2020 \textbf{--} Jun 2023 (Expected)}
-        % \resumeItemListStart
-            % \resumeItem{\textbf{Relevant coursework:} Calculus I-II, Matrix Theory, Differential Equations, Materials Science, Electrical Circuits I-II, Digital System Design, Numerical Methods, Probability Theory, Electronics I-II, Signals and Systems, Electromagnetic Field Theory, Energy Conversion, System Dynamics and Control, Communication Engineering}
-        % \resumeItemListEnd
+
+  \resumeSubheading
+  {University of Pennsylvania
+  }{Pennsylvania, United States}
+  {Master of Science in Data Science;   \textbf{GPA: 3.93/4.00}}{Sep 2020 \textbf{--} Jun 2022}
     
     \resumeSubheading
-      {Kocaeli Science High School
-      % \normalfont{(Admission rate: 0.85\%)}
-      }{Kocaeli, Turkey}
-      {High School Diploma;   \textbf{GPA: 97.03/100}}{Sep 2014 \textbf{--} Jun 2018}
+      {University of California, Santa Barbara
+      }{California, Unites States}
+      {Bachelor of Science in Statistical Science;   \textbf{GPA: 3.67/4.00}}{Sep 2016 \textbf{--} Mar 2020}
     
   \resumeSubHeadingListEnd
 
